# DeviceAccess-DoocsBackend

./: .jenkinsfile  CMakeLists.txt
doc/: spec_DoocsBackend.dox
include/: CatalogueCache.h  CatalogueFetcher.h  DoocsBackend.h  DoocsBackendEventIdAccessor.h  DoocsBackendFloatRegisterAccessor.h  DoocsBackendIFFFRegisterAccessor.h  DoocsBackendIIIIRegisterAccessor.h  DoocsBackendImageRegisterAccessor.h  DoocsBackendIntRegisterAccessor.h  DoocsBackendLongRegisterAccessor.h  DoocsBackendNumericRegisterAccessor.h  DoocsBackendRegisterAccessor.h  DoocsBackendStringRegisterAccessor.h  DoocsBackendTimeStampAccessor.h  DoocsBackendXyRegisterAccessor.h  EventIdMapper.h  RegisterInfo.h  StringUtility.h  ZMQSubscriptionManager.h
src/: CatalogueCache.cc  CatalogueFetcher.cc  DoocsBackend.cc  DoocsBackendImageRegisterAccessor.cc  DoocsBackendXyRegisterAccessor.cc  EmptyDoocsFunctions.cc  EventIdMapper.cc  RegisterInfo.cc  StringUtility.cc  ZMQSubscriptionManager.cc
tests/: doocsDummy_rpc_server.conf
tests/DoocsDummyServer/: doocsDummy_rpc_server.cc  eq_dummy.cc  eq_dummy.h
tests/executables_src/: testCaching.cpp  testDoocsBackend.cpp  testUnifiedBackendTest.cpp  testZeroMQ.cpp
